tests/security/taintSinkWithComments/output.txt
ERROR: TaintedData - input.hack:7:21 - Detected tainted HTML tags